deploy-ui/base/deployment_template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: np-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app:
  template:
    metadata:
      labels:
        app:
    spec:
      containers:
      - name:
        image:
        ports:
        - containerPort: 8080
      imagePullSecrets:
          - name: akscoreregcred
