deploy-ui/base/service_template.yaml
apiVersion: v1
kind: Service
metadata:
  name:
spec:
  selector:
    app:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
